tests/invalid/dereference_non_pointer.lang
extern fn main() {
    var i: i32 = 1;
    var b: i32 = *i;
}
